# template-template-rs

./: README.md
template/: Cargo.toml  cargo-generate.toml  rename.rhai
